...
    case .library(let id): return (nil, id, false)
    }
  }

  public var title: String {
    switch self {
    case .all: return "All"
    case .personal: return "Personal"
    case .space: return "Space"
    case .library: return "Library"
    }
  }
}
...
